--- a/src/scss/components/products/_product-card.scss
+++ b/src/scss/components/products/_product-card.scss
@@ -91,7 +91,7 @@
 }
 
 .card-content {
-  padding: 1rem 0;
+  padding: 0.75rem 0;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
